# cellar-nginx

./: .dockerignore  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml
src/: lib.rs  main.rs  verbose.rs  vhost.template
tests/: Dockerfile  docker.rs  integration.rs  lib.rs  test_integration.rs
tests/common/: docker.rs  mod.rs  runner.rs
tests/fixtures/: general.conf  nginx.conf  nvhosts.toml  proxy.conf  security.conf  security_headers.conf
