[package]
authors = ["Maxime Le Conte des Floris <git@mlcdf.fr>"]
edition = "2018"
name = "nvhosts"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.44"
argh = "^0.1.6"
confy = "0.4"
serde = {version = "1.0.130", features = ["derive"]}
tera = {version = "1", default-features = false}
toml = "0.5.8"

[dev-dependencies]
ureq = "2.3.0"