[package]
authors = ["Maxime Le Conte des Floris <git@mlcdf.fr>"]
edition = "2021"
name = "nvhosts"
version = "0.1.0"

[dependencies]
anyhow = "^1.0.44"
argh = "^0.1.6"
confy = "0.4"
regex = "1.5.4"
serde = {version = "1.0.130", features = ["derive"]}
tera = {version = "1", default-features = false}
toml = "0.5.8"

[dev-dependencies]
lazy_static = "1.4.0"
serde_json = "1.0.59"
ureq = "2.3.0"
